fixed issue with sidebar covering the info

--- a/styles/cv_ham.css
+++ b/styles/cv_ham.css
@@ -13,10 +13,10 @@ h1, h2, h3 {
 /* Menú lateral a la derecha */
 .sidebar {
     height: 100%;
-    width: 0;
+    width: 250px;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -250px;
     background-color: #033b70;
     overflow-x: hidden;
     transition: 0.5s;
@@ -25,7 +25,7 @@ h1, h2, h3 {
 }
 
 .sidebar a {
-    padding: 8px 8px 8px 32px;
+    padding: 6px 12px 6px 12px;
     text-decoration: none;
     font-size: 25px;
     color: white;
@@ -41,8 +41,13 @@ h1, h2, h3 {
 .sidebar .closebtn {
     position: absolute;
     top: 10px;
-    left: 25px;
+    right: 25px;
     font-size: 36px;
+}
+
+/* Cuando el menú está abierto, cambiar la posición */
+.sidebar.open {
+    right: 0; /* Mover el menú a la vista */
 }
 
 /* Botón de menú de hamburguesa */
