--- a/styles/index_ham.css
+++ b/styles/index_ham.css
@@ -31,10 +31,10 @@ h1, h2, h3 {
 /* Menú lateral a la derecha */
 .sidebar {
     height: 100%;
-    width: 0;
+    width: 250px;
     position: fixed;
     top: 0;
-    right: 0; /* Cambiado a la derecha */
+    right: -250px; /* Cambiado a la derecha */
     background-color: #033b70;
     overflow-x: hidden;
     transition: 0.5s;
@@ -43,7 +43,7 @@ h1, h2, h3 {
 }
 
 .sidebar a {
-    padding: 8px 8px 8px 32px;
+    padding: 6px 12px 6px 12px;
     text-decoration: none;
     font-size: 25px;
     color: white;
@@ -56,10 +56,15 @@ h1, h2, h3 {
     color: #ffffff;
 }
 
+/* Cuando el menú está abierto, cambiar la posición */
+.sidebar.open {
+    right: 0; /* Mover el menú a la vista */
+}
+
 .sidebar .closebtn {
     position: absolute;
     top: 10px;
-    left: 25px;
+    right: 25px;
     font-size: 36px;
 }
 
