--- a/styles/pubs_ham.css
+++ b/styles/pubs_ham.css
@@ -23,10 +23,10 @@ h1, h2, h3 {
 
 .sidebar {
     height: 100%;
-    width: 0;
+    width: 250px;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -250px;
     background-color: #033b70;
     overflow-x: hidden;
     transition: 0.5s;
@@ -35,7 +35,7 @@ h1, h2, h3 {
 }
 
 .sidebar a {
-    padding: 10px 15px;
+    padding: 6px 12px 6px 12px;
     text-decoration: none;
     font-size: 25px;
     color: white;
@@ -53,6 +53,11 @@ h1, h2, h3 {
     right: 25px;
     font-size: 36px;
     color: white;
+}
+
+/* Cuando el menú está abierto, cambiar la posición */
+.sidebar.open {
+    right: 0; /* Mover el menú a la vista */
 }
 
 /* Contenedor principal */
